# yolov5_train_cpp_inference

./: .gitignore  00_cp_multi_ip_data.py  00_cp_val_error_data.py  01_train.py  02_val.py  03_export.py  04_pred_traindata_to_labeltxt.py  val.py  val_error_imgs.txt
04_detect_cpp/: CMakeLists.txt  run_cmd.md
04_detect_cpp/include/: detector.h
04_detect_cpp/src/: main.cpp  main_gpu.cpp
data/: 02_linkBriken_coco128.yaml  03_fanyingshi_coco128.yaml  03_fanyingshi_coco128_test.yaml  04_dumei_coco128.yaml  04_dumei_coco128_test.yaml  05_chumuqi_coco128.yaml  05_chumuqi_coco128_test.yaml  coco128.yaml  coco128_test.yaml
data/other_configs/: coco128_ori.yaml
utils/: plots.py
